--- a/index.html
+++ b/index.html
@@ -3,10 +3,73 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Test Push</title>
-	<link rel="stylesheet" href="">
+	<title>Search NYT</title>
+	<link rel="stylesheet" href="assets/css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
-	
+
+	<div class="container-fluid bg">
+
+		<!-- Header -->
+		<div class="row">
+			<div class="col header">
+
+			</div>
+		</div>
+
+		<!-- Content Columns -->
+		<div class="row">
+			<div class="col search-parameters">
+				<form>
+				  <div class="form-group">
+				    <label for="searchTerm">Search Terms</label>
+				    <input type="input" class="form-control" id="searchTerm" placeholder="Search Terms">
+				  </div>
+				  <div class="form-group">
+				    <label for="searchLimit">Number of Searches</label>
+				    <select class="form-control" id="searchLimit">
+				      <option>5</option>
+				      <option>10</option>
+				      <option>15</option>
+				    </select>
+				  </div>
+				  <div class="form-group">
+				    <label for="startYear">Start Year</label>
+				    <input type="input" class="form-control" id="startYear" placeholder="Start Year">
+				  </div>
+				  <div class="form-group">
+				    <label for="endYear">End Year</label>
+				    <input type="input" class="form-control" id="endYear" placeholder="End Year">
+				  </div>
+				  <button type="submit" class="submit btn btn-primary"><span class="oi oi-magnifying-glass"></span> Search</button>
+				  <button type="input" class="btn btn-secondary">Clear</button>
+				</form>
+			</div>
+			<div class="col search-results">
+				<div class="card">
+				  <div class="card-body">
+				    <h4 class="card-title">Card title</h4>
+				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <a href="#" class="card-link">Card link</a>
+				    <a href="#" class="card-link">Another link</a>
+				  </div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+	<!-- jQuery -->
+	<!-- <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script> -->
+
+	<!-- Additional Styles -->
+  <script src="assets/javascript/script.js"></script>
 </body>
 </html>
